Add footer section

--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/style.css">
     <title>Perma | TNW</title>
 </head>
 
 <body>
     <header>
+        <nav class="grid col-30x70">
+            <div class="item-height display-flex flex-align-center justify-center w3-black">
+                <a href="#">
+                    <img class="logo" src="style/logo.svg" alt="">
+                </a>
+            </div>
+
+            <div class="display-flex justify-end">
+                <ul class="item-heigh display-flex flex-align-center">
+                    <li class="w3-border-left w3-padding-24"><i class="fa fa-search fa-lg w3-text-grey"></i></li>
+                    <li class="w3-border-left w3-padding-24"><i class="fa fa-bars fa-lg w3-text-orange"></i></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!-- <header>
         <nav class="nav">
             <div class="wrapper-flex">
                 <div class="nav-logo">
@@ -22,7 +40,10 @@
                 </div>
                 <div class="nav-icons">
                     <div class="icons">
-                        <a href="https://icon-library.net/icon/magnifier-icon-png-24.html" title="Magnifier Icon Png #401942"><img src="https://icon-library.net//images/magnifier-icon-png/magnifier-icon-png-24.jpg"  class="icon-search" />
+                        <a href="https://icon-library.net/icon/magnifier-icon-png-24.html"
+                            title="Magnifier Icon Png #401942"><img
+                                src="https://icon-library.net//images/magnifier-icon-png/magnifier-icon-png-24.jpg"
+                                class="icon-search" />
                         </a>
                     </div>
                     <div class="icons">
@@ -42,7 +63,42 @@
                 </div>
             </a>
         </nav>
-    </header>
+    </header> -->
+
+    <footer>
+        <div>
+            <ul>
+                <li><i class="fa fa-facebook"></i></li>
+                <li class="fa fa-twitter"></li>
+                <li class="fa fa-youtube"></li>
+                <li class="fa fa-instagram"></li>
+                <li class="fa fa-pinterest"></li>
+                <li class="fa fa-rss"></li>
+            </ul>
+
+            <ul>
+                <li>
+                    <a href="#">Lorem</a>
+                </li>
+                <li>
+                    <a href="#">Lorem</a>
+                </li>
+                <li>
+                    <a href="#">Lorem</a>
+                </li>
+                <li>
+                    <a href="#">Lorem</a>
+                </li>
+                <li>
+                    <a href="#">Lorem</a>
+                </li>
+            </ul>
+        </div>
+
+        <div>
+            &copy; 2001-2006 The Next Web B.V. Made with 3 in Amsterdam. Powered by STACKPATH
+        </div>
+    </footer>
 </body>
 
 </html>
