Add style to footer

--- a/index.html
+++ b/index.html
@@ -66,37 +66,36 @@
     </header> -->
 
     <footer>
-        <div>
+        <div class="footer-top">
+                    <ul>
+                        <li><i class="fa fa-facebook icon-f"></i></li>
+                        <li><i class="fa fa-twitter icon-f"></i></li>
+                        <li><i class="fa fa-youtube icon-f"></i></li>
+                        <li><i class="fa fa-instagram icon-f"></i></li>
+                        <li><i class="fa fa-pinterest icon-f"></i></li>
+                        <li><i class="fa fa-rss icon-f"></i></li>
+                    </ul>
             <ul>
-                <li><i class="fa fa-facebook"></i></li>
-                <li class="fa fa-twitter"></li>
-                <li class="fa fa-youtube"></li>
-                <li class="fa fa-instagram"></li>
-                <li class="fa fa-pinterest"></li>
-                <li class="fa fa-rss"></li>
-            </ul>
-
-            <ul>
-                <li>
+                <li class="link-f">
                     <a href="#">Lorem</a>
                 </li>
-                <li>
+                <li class="link-f">
                     <a href="#">Lorem</a>
                 </li>
-                <li>
+                <li class="link-f">
                     <a href="#">Lorem</a>
                 </li>
-                <li>
+                <li class="link-f">
                     <a href="#">Lorem</a>
                 </li>
-                <li>
+                <li class="link-f">
                     <a href="#">Lorem</a>
                 </li>
             </ul>
         </div>
 
-        <div>
-            &copy; 2001-2006 The Next Web B.V. Made with 3 in Amsterdam. Powered by STACKPATH
+        <div class="footer-bottom">
+            <div class="footer-wrapper"><span>&copy; 2001-2006 The Next Web B.V.</span><span> Made with 3 in Amsterdam.</span><span>Powered by <strong>STACKPATH</strong></span></div>
         </div>
     </footer>
 </body>
