Add responsive css to funding section

--- a/index.html
+++ b/index.html
@@ -86,9 +86,17 @@
     <main class="header-clearance">
         <section class="highlights grid col-70x30-md">
             <div class="bg-img w3-display-container standalone">
-                <div class="display-top z999">
-                    <img class="standalone-logo" src="style/logo.svg" alt="">
+                <div class="hide-sm hide-md show-lg">
+                    <div class="grid col-70x30-lg w3-padding">
+                        <div>
+                            <img class="standalone-logo" src="style/logo.svg" alt="">
+                        </div>
+                        <div class="display-flex justify-end">
+                            <span>Tuesday -- January 26, 2017</span>
+                        </div>
+                    </div>
                 </div>
+
 
                 <div class="display-bottom w3-padding">
                     <span class="card-title w3-text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -162,7 +170,7 @@
                 </ul>
             </div>
 
-            <div class="grid">
+            <div class="grid col-3-md col-4-lg">
                 <div>
                     <div>
                         <div class="float-left">
@@ -199,43 +207,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                    <div>
-                        <div class="float-left">
-                            <img class="fund-icon" src="https://wr.perma-archives.org/public/m5zv-q2d6/20210126152646im_/https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1198933202947203078%2FyGxNiAdA.png&signature=d0c4ef35a8e410806bed50513f59f79b
-                            " alt="">
-                        </div>
 
-                        <div>
-                            <div class="ringover">
-                                <h2 class="target">Ringover</h2>
-                            </div>
-                            <div class="w3-blue">
-                                <div class="pad-left">
-                                    <h2 class="target">$12M</h2>
-                                    <h4>SERIES A</h4>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="grid-bottom-icons">
-                            <ul>
-                                <li>
-                                    <i class="fa fa-tag"></i>
-                                    <span class="icon-description">Telecommunications</span>
-                                </li>
-                                <li>
-                                    <i class="fa fa-suitcase"></i>
-                                    <span class="icon-description">Expedition</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="bottom-caption">
-                            <a href="#">Ringover raises $12 million to bring enterprise communications to the cloud
-                                <span>on VentureBeat</span></a>
-                        </div>
-                    </div>
-                </div>
                 <div>
                     <div>
                         <div class="float-left">
@@ -273,7 +245,46 @@
                         </div>
                     </div>
                 </div>
+
                 <div>
+                    <div>
+                        <div class="float-left">
+                            <img class="fund-icon" src="https://wr.perma-archives.org/public/m5zv-q2d6/20210126152646im_/https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1198933202947203078%2FyGxNiAdA.png&signature=d0c4ef35a8e410806bed50513f59f79b
+                            " alt="">
+                        </div>
+
+                        <div>
+                            <div class="ringover">
+                                <h2 class="target">Ringover</h2>
+                            </div>
+                            <div class="w3-blue">
+                                <div class="pad-left">
+                                    <h2 class="target">$12M</h2>
+                                    <h4>SERIES A</h4>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="grid-bottom-icons">
+                            <ul>
+                                <li>
+                                    <i class="fa fa-tag"></i>
+                                    <span class="icon-description">Telecommunications</span>
+                                </li>
+                                <li>
+                                    <i class="fa fa-suitcase"></i>
+                                    <span class="icon-description">Expedition</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="bottom-caption">
+                            <a href="#">Ringover raises $12 million to bring enterprise communications to the cloud
+                                <span>on VentureBeat</span></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="show-lg hide-md">
                     <div>
                         <div class="float-left">
                             <img class="fund-icon" src="https://wr.perma-archives.org/public/m5zv-q2d6/20210126152646im_/https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1198933202947203078%2FyGxNiAdA.png&signature=d0c4ef35a8e410806bed50513f59f79b
