Add latest deal section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </header>
 
     <main class="header-clearance">
-        <section class="highlights grid col-70x30-md">
+        <section class="funding highlights grid col-70x30-md">
             <div class="bg-img w3-display-container standalone">
                 <div class="hide-sm hide-md show-lg">
                     <div class="grid col-70x30-lg w3-padding">
@@ -447,7 +447,7 @@
             </div>
         </section>
 
-        <section class="grid col-2-md col-3-lg gap-row-lg gap-column-md">
+        <section class="funding grid col-2-md col-3-lg gap-row-lg gap-column-md">
             <section class="hard-fork">
                 <div class="title-fork">
                     <h1>Hard Fork ></h1>
@@ -712,6 +712,141 @@
                     </ul>
                 </div>
             </section>
+        </section>
+
+        <section class="funding">
+                <div class="deals-container">
+                    <h2><a href="#">Latest Deals ></a></h2>
+                    <span><a href="#">See all deals</a></span>
+                </div>
+                <ul>
+                    <li class="flex-container">
+                        <div class="img-li">
+                            <img class="img-li"
+                                src="https://wr.perma-archives.org/public/m5zv-q2d6/20210126152647mp_/https://cdnp3.stackassets.com/b34f2af9e9ec3122eb0c0b252532b61f8a08c0ea/store/243275a3bf8c7d20203d2e6e3b9f3664926f9f8913e755d1ae8811aecd9b/sale_25748_primary_image.jpg"
+                                alt="">
+                        </div>
+                        <div>
+                            <h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4>
+                            <ul class="flex-container">
+                                <li>$1345</li>
+                                <li>$39.90</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="flex-container">
+                        <div class="img-li">
+                            <img class="img-li"
+                                src="https://wr.perma-archives.org/public/m5zv-q2d6/20210126152647mp_/https://cdnp3.stackassets.com/b34f2af9e9ec3122eb0c0b252532b61f8a08c0ea/store/243275a3bf8c7d20203d2e6e3b9f3664926f9f8913e755d1ae8811aecd9b/sale_25748_primary_image.jpg"
+                                alt="">
+                        </div>
+                        <div>
+                            <h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4>
+                            <ul class="flex-container">
+                                <li>$1345</li>
+                                <li>$39.90</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="flex-container">
+                        <div class="img-li">
+                            <img class="img-li"
+                                src="https://wr.perma-archives.org/public/m5zv-q2d6/20210126152647mp_/https://cdnp3.stackassets.com/b34f2af9e9ec3122eb0c0b252532b61f8a08c0ea/store/243275a3bf8c7d20203d2e6e3b9f3664926f9f8913e755d1ae8811aecd9b/sale_25748_primary_image.jpg"
+                                alt="">
+                        </div>
+                        <div>
+                            <h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4>
+                            <ul class="flex-container">
+                                <li>$1345</li>
+                                <li>$39.90</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="flex-container">
+                        <div class="img-li">
+                            <img class="img-li"
+                                src="https://wr.perma-archives.org/public/m5zv-q2d6/20210126152647mp_/https://cdnp3.stackassets.com/b34f2af9e9ec3122eb0c0b252532b61f8a08c0ea/store/243275a3bf8c7d20203d2e6e3b9f3664926f9f8913e755d1ae8811aecd9b/sale_25748_primary_image.jpg"
+                                alt="">
+                        </div>
+                        <div>
+                            <h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4>
+                            <ul class="flex-container">
+                                <li>$1345</li>
+                                <li>$39.90</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="flex-container">
+                        <div class="img-li">
+                            <img class="img-li"
+                                src="https://wr.perma-archives.org/public/m5zv-q2d6/20210126152647mp_/https://cdnp3.stackassets.com/b34f2af9e9ec3122eb0c0b252532b61f8a08c0ea/store/243275a3bf8c7d20203d2e6e3b9f3664926f9f8913e755d1ae8811aecd9b/sale_25748_primary_image.jpg"
+                                alt="">
+                        </div>
+                        <div>
+                            <h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4>
+                            <ul class="flex-container">
+                                <li>$1345</li>
+                                <li>$39.90</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="flex-container">
+                        <div class="img-li">
+                            <img class="img-li"
+                                src="https://wr.perma-archives.org/public/m5zv-q2d6/20210126152647mp_/https://cdnp3.stackassets.com/b34f2af9e9ec3122eb0c0b252532b61f8a08c0ea/store/243275a3bf8c7d20203d2e6e3b9f3664926f9f8913e755d1ae8811aecd9b/sale_25748_primary_image.jpg"
+                                alt="">
+                        </div>
+                        <div>
+                            <h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4>
+                            <ul class="flex-container">
+                                <li>$1345</li>
+                                <li>$39.90</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="flex-container">
+                        <div class="img-li">
+                            <img class="img-li"
+                                src="https://wr.perma-archives.org/public/m5zv-q2d6/20210126152647mp_/https://cdnp3.stackassets.com/b34f2af9e9ec3122eb0c0b252532b61f8a08c0ea/store/243275a3bf8c7d20203d2e6e3b9f3664926f9f8913e755d1ae8811aecd9b/sale_25748_primary_image.jpg"
+                                alt="">
+                        </div>
+                        <div>
+                            <h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4>
+                            <ul class="flex-container">
+                                <li>$1345</li>
+                                <li>$39.90</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="flex-container">
+                        <div class="img-li">
+                            <img class="img-li"
+                                src="https://wr.perma-archives.org/public/m5zv-q2d6/20210126152647mp_/https://cdnp3.stackassets.com/b34f2af9e9ec3122eb0c0b252532b61f8a08c0ea/store/243275a3bf8c7d20203d2e6e3b9f3664926f9f8913e755d1ae8811aecd9b/sale_25748_primary_image.jpg"
+                                alt="">
+                        </div>
+                        <div>
+                            <h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4>
+                            <ul class="flex-container">
+                                <li>$1345</li>
+                                <li>$39.90</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
         </section>
     </main>
 
