Add features + responsiveness + fixed minor issues

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
         </section>
 
-        <section class="container latest-news">
+        <section class="container container2 latest-news">
             <h2 class="font-def"><a href="#">Latest News ></a></h2>
             <div class="grid-md col-3-md col-4-lg">
                 <div class="list-item">
@@ -275,7 +275,7 @@
             </div>
         </section>
 
-        <section class="container funding">
+        <section class="container container2 funding">
             <div class="header-container grid col-fund-list">
                 <div>
                     <h1 class="font-def">Latest funding rounds on Index.co ></h1>
@@ -443,7 +443,7 @@
             </div>
         </section>
 
-        <section class="container funding grid col-2-md col-3-lg gap-row-lg gap-column-md">
+        <section class="container container2 funding grid col-2-md col-3-lg gap-row-lg gap-column-md">
             <section class="hard-fork">
                 <div class="title-fork">
                     <h1 class="font-def">Hard Fork ></h1>
@@ -452,7 +452,7 @@
                 <div class="w3-display-container bg-container">
                     <div class="w3-display-bottomleft w3-padding">
                         <span class="card-title4">MOST POPULAR</span>
-                        <h1 class="card-title w3-text-white">This Mac app automatically detects your duplicate files
+                        <h1 class="card-title2 w3-text-white">This Mac app automatically detects your duplicate files
                         </h1>
                         <div class="display-flex">
                             <div>
@@ -499,7 +499,7 @@
                 <div class="w3-display-container bg-container">
                     <div class="w3-display-bottomleft w3-padding">
                         <span class="card-title4">MOST POPULAR</span>
-                        <h1 class="card-title w3-text-white">This Mac app automatically detects your duplicate files
+                        <h1 class="card-title2 w3-text-white">This Mac app automatically detects your duplicate files
                         </h1>
                         <div class="display-flex">
                             <div>
@@ -546,7 +546,7 @@
                 <div class="w3-display-container bg-container">
                     <div class="w3-display-bottomleft w3-padding">
                         <span class="card-title4">MOST POPULAR</span>
-                        <h1 class="card-title w3-text-white">This Mac app automatically detects your duplicate files
+                        <h1 class="card-title2 w3-text-white">This Mac app automatically detects your duplicate files
                         </h1>
                         <div class="display-flex">
                             <div>
@@ -593,7 +593,7 @@
                 <div class="w3-display-container bg-container">
                     <div class="w3-display-bottomleft w3-padding">
                         <span class="card-title4">MOST POPULAR</span>
-                        <h1 class="card-title w3-text-white">This Mac app automatically detects your duplicate files
+                        <h1 class="card-title2 w3-text-white">This Mac app automatically detects your duplicate files
                         </h1>
                         <div class="display-flex">
                             <div>
@@ -640,7 +640,7 @@
                 <div class="w3-display-container bg-container">
                     <div class="w3-display-bottomleft w3-padding">
                         <span class="card-title4">MOST POPULAR</span>
-                        <h1 class="card-title w3-text-white">This Mac app automatically detects your duplicate files
+                        <h1 class="card-title2 w3-text-white">This Mac app automatically detects your duplicate files
                         </h1>
                         <div class="display-flex">
                             <div>
@@ -687,7 +687,7 @@
                 <div class="w3-display-container bg-container">
                     <div class="w3-display-bottomleft w3-padding">
                         <span class="card-title4">MOST POPULAR</span>
-                        <h1 class="card-title w3-text-white">This Mac app automatically detects your duplicate files
+                        <h1 class="card-title2 w3-text-white">This Mac app automatically detects your duplicate files
                         </h1>
                         <div class="display-flex">
                             <div>
@@ -726,18 +726,18 @@
                     </ul>
                 </div>
             </section>
-            
+
 
 
         </section>
 
-        <section class="container latest-deals">
+        <section class="container container2 latest-deals">
             <div class="deals-container">
                 <h2 class="font-def"><a href="#">Latest Deals ></a></h2>
                 <span><a href="#">See all deals</a></span>
             </div>
 
-            <div class="grid col-4-lg col-3-md">
+            <div class="grid col-4-lg2 col-3-md">
                 <div class="list-item">
                     <div class="img-latest-deals">
                         <a href="#"></a>
@@ -787,7 +787,8 @@
                         <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
                         <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
                     </div>
-                </div>                <div class="list-item">
+                </div>
+                <div class="list-item">
                     <div class="img-latest-deals">
                         <a href="#"></a>
                     </div>
@@ -856,6 +857,15 @@
             </span>
         </div>
     </footer>
+    <div class="svg">
+        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 100 131.3"
+            enable-background="new 0 0 100 131.3" xml:space="preserve">
+            <path
+                d="M71.6,131.3c1,0,2.1-0.3,3.1-0.8c3.9-1.8,5.5-6.2,3.6-10.1c0,0-14.3-32.7-16.9-44.7c-1-4.2-1.6-15.3-1.8-20.5c0-1.8,1-3.4,2.6-3.9l32-9.6c3.9-1,6.2-5.5,5.2-9.4c-1-3.9-5.5-6.2-9.4-5.2c0,0-29.6,9.6-40.3,9.6c-10.4,0-39.8-9.4-39.8-9.4c-3.9-1-8.3,0.8-9.6,4.7c-1.3,4.2,1,8.6,5.2,9.6l32,9.6c1.6,0.5,2.9,2.1,2.6,3.9c-0.3,5.2-0.8,16.4-1.8,20.5c-2.6,12-16.9,44.7-16.9,44.7c-1.8,3.9,0,8.3,3.6,10.1c1,0.5,2.1,0.8,3.1,0.8c2.9,0,5.7-1.6,6.8-4.4l15.3-31.2l14.6,31.4C66.1,129.7,68.7,131.3,71.6,131.3z">
+            </path>
+            <circle style="fill: #fff;" cx="50.3" cy="14.6" r="14.6"></circle>
+        </svg>
+    </div>
 </body>
 
 </html>
