Add transformation to discount section

--- a/index.html
+++ b/index.html
@@ -731,86 +731,22 @@
 
         </section>
 
-        <section class="container container2 latest-deals">
+        <section class="container container2 latest-deals overflow-hidden">
             <div class="deals-container">
                 <h2 class="font-def"><a href="#">Latest Deals ></a></h2>
                 <span><a href="#">See all deals</a></span>
             </div>
 
-            <div class="grid col-4-lg2 col-3-md">
+            <div class="grid col-4-lg2 col-3-md ">
                 <div class="list-item">
-                    <div class="img-latest-deals">
-                        <a href="#"></a>
-                    </div>
+                    <div class="img-latest-deals flex-container justify-end">
+                        <div class="hide-sm show-md show-lg clip-bg"></div>
 
-                    <div class="flex-container flex-column">
-                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
-                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
-                    </div>
-                </div>
-                <div class="list-item">
-                    <div class="img-latest-deals">
-                        <a href="#"></a>
-                    </div>
-
-                    <div class="flex-container flex-column">
-                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
-                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
-                    </div>
-                </div>
-                <div class="list-item">
-                    <div class="img-latest-deals">
-                        <a href="#"></a>
-                    </div>
-
-                    <div class="flex-container flex-column">
-                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
-                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
-                    </div>
-                </div>
-                <div class="list-item">
-                    <div class="img-latest-deals">
-                        <a href="#"></a>
-                    </div>
-
-                    <div class="flex-container flex-column">
-                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
-                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
-                    </div>
-                </div>
-                <div class="list-item">
-                    <div class="img-latest-deals">
-                        <a href="#"></a>
-                    </div>
-
-                    <div class="flex-container flex-column">
-                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
-                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
-                    </div>
-                </div>
-                <div class="list-item">
-                    <div class="img-latest-deals">
-                        <a href="#"></a>
-                    </div>
-
-                    <div class="flex-container flex-column">
-                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
-                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
-                    </div>
-                </div>
-                <div class="list-item">
-                    <div class="img-latest-deals">
-                        <a href="#"></a>
-                    </div>
-
-                    <div class="flex-container flex-column">
-                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
-                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
-                    </div>
-                </div>
-                <div class="list-item">
-                    <div class="img-latest-deals">
-                        <a href="#"></a>
+                        <div class="hide-sm show-md show-lg transform w3-display-container">
+                            <div class="w3-display-topmiddle">
+                                99% OFF
+                            </div>
+                        </div>
                     </div>
 
                     <div class="flex-container flex-column">
@@ -819,6 +755,124 @@
                     </div>
                 </div>
 
+                <div class="list-item">
+                    <div class="img-latest-deals flex-container justify-end">
+                        <div class="hide-sm show-md show-lg clip-bg"></div>
+
+                        <div class="hide-sm show-md show-lg transform w3-display-container">
+                            <div class="w3-display-topmiddle">
+                                99% OFF
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex-container flex-column">
+                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
+                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
+                    </div>
+                </div>
+
+                <div class="list-item">
+                    <div class="img-latest-deals flex-container justify-end">
+                        <div class="hide-sm show-md show-lg clip-bg"></div>
+
+                        <div class="hide-sm show-md show-lg transform w3-display-container">
+                            <div class="w3-display-topmiddle">
+                                99% OFF
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex-container flex-column">
+                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
+                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
+                    </div>
+                </div>
+
+                <div class="list-item">
+                    <div class="img-latest-deals flex-container justify-end">
+                        <div class="hide-sm show-md show-lg clip-bg"></div>
+
+                        <div class="hide-sm show-md show-lg transform w3-display-container">
+                            <div class="w3-display-topmiddle">
+                                99% OFF
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex-container flex-column">
+                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
+                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
+                    </div>
+                </div>
+
+                <div class="list-item">
+                    <div class="img-latest-deals flex-container justify-end">
+                        <div class="hide-sm show-md show-lg clip-bg"></div>
+
+                        <div class="hide-sm show-md show-lg transform w3-display-container">
+                            <div class="w3-display-topmiddle">
+                                99% OFF
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex-container flex-column">
+                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
+                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
+                    </div>
+                </div>
+
+                <div class="list-item">
+                    <div class="img-latest-deals flex-container justify-end">
+                        <div class="hide-sm show-md show-lg clip-bg"></div>
+
+                        <div class="hide-sm show-md show-lg transform w3-display-container">
+                            <div class="w3-display-topmiddle">
+                                99% OFF
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex-container flex-column">
+                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
+                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
+                    </div>
+                </div>
+
+                <div class="list-item">
+                    <div class="img-latest-deals flex-container justify-end">
+                        <div class="hide-sm show-md show-lg clip-bg"></div>
+
+                        <div class="hide-sm show-md show-lg transform w3-display-container">
+                            <div class="w3-display-topmiddle">
+                                99% OFF
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex-container flex-column">
+                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
+                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
+                    </div>
+                </div>
+
+                <div class="list-item">
+                    <div class="img-latest-deals flex-container justify-end">
+                        <div class="hide-sm show-md show-lg clip-bg"></div>
+
+                        <div class="hide-sm show-md show-lg transform w3-display-container">
+                            <div class="w3-display-topmiddle">
+                                99% OFF
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex-container flex-column">
+                        <h4 class="card-title3">Want to drive a hydrogen EV in the US? Move to California</h4>
+                        <div><span class="strike">$300</span> <span class="new-price">$234</span></div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
