--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/css/style.css">
     <title>Perma | TNW</title>
 </head>
 
@@ -45,7 +45,7 @@
         <nav class="grid col-30x70">
             <div class="display-flex item-height flex-align-center justify-center w3-black hide-md">
                 <a href="#">
-                    <img class="logo" src="style/logo.svg" alt="">
+                    <img class="logo" src="img/logo.svg" alt="">
                 </a>
             </div>
 
